Fix layout for actions on smaller screens

--- a/wp-content/themes/pub/wporg-learn-2024/src/style/_sensei.scss
+++ b/wp-content/themes/pub/wporg-learn-2024/src/style/_sensei.scss
@@ -175,6 +175,10 @@ body.sensei {
 				gap: var(--wp--preset--spacing--10);
 				justify-content: space-between;
 
+				@media screen and (max-width: 782px) {
+					flex-direction: column;
+				}
+
 				> *,
 				.sensei-buttons-container__button-block {
 					padding: unset;
